2019-06-09:
- Fixed level formula.

2019-06-07:
- Added "StealAvatar"-command.
- Added coin flip command.
- Added feature counters for future statistics (user and guild).
- Added level feature. (LevelCommand, related db tables, LevelListener)
- Added autorole feature. ((Un)setting role, automatically receiving role)
- Added file only channel feature. (Set up channels in which users only can post links and files)

2019-06-04.2:
- Added "AddGif"-command for easy interaction gif management.
- Added clear command to delete messages.
- Removed command editing cooldown.

2019-06-04:
- Added interaction commands. (Beg, Cookie, Dab, Highfive, Hug, Kiss, Pat, Slap)
- Added abtract class for interaction commands.
- Added user setting (color) command.
- Added database connection.
- Added interaction counter on database.
- Added user setting (color) on database.
- Added table for interaction gifs.
- Added table for custom emotes. (Not yet supported)
- Added Log class for easy error handling.
- Added parser class. Currently parses only color codes.
- Turned static user class into instance class.

2019-06-03:
- Bot set up.
- Bot connecting to Discord.
- Added config file class.
- Added default JDA-Utilities commands.
- Added onReady event with "ready"-message.